# Artificial-Intelligence

assignment-2/: actions.csv  board.py  env.py  output.txt  policy.py  policy_graph  pyproject.toml  requirements.txt  train.ipynb  train.py  training.py
assignment-2/src/: actions.csv  actor.py  board.py  critic.py  env.py  epochs.csv  requirements.txt  train.py
chess/: pyproject.toml
chess/src/: actor.py  env.py  train.ipynb  train.py
