[project]
name = "chess"
version = "0.1.0"
description = ""
authors = [
    {name = "blbergo"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "gym-chess",
    "setuptools (>=79.0.1,<80.0.0)",
    "torchrl (>=0.7.2,<0.8.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
