[project]
name = "assignment-2"
version = "0.1.0"
description = ""
authors = [
    {name = "blbergo"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-chess (>=1.999,<2.0)",
    "torchrl (>=0.7.2,<0.8.0)",
    "gymnasium (<1.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
